lab1/Test/L1-A-8-32.output
Error Type B at Line 3
Error Type B at Line 4
Error Type B at Line 14
Error Type B at Line 27
Error Type B at Line 38
