lab1/Test/L1-A-8-32.cmm
int XzfWFCc4KSpetQC ( ) {
  struct {
  }ftCkSuFMDAdSd4xAZ_ , oXrBSi788zLXGAh ;== 
float   float adMpn3HnMPTDd1eSB [ 1227551487 ] = wSiI1AkORM8pO43ZRRm 
    ;
  if ( k ) {
    if ( FULNa83SHLF )     hn2heMF_8FIVn ;

    vVLxEBp3DtPlU_1hlqOq ;
  }else   if ( tXjBKa2xhJPIia )   if ( BK )   while 
    ( gq )   d_9xRiFyEHDpc_kSs ;

else   return ZzXdGpw = E39OK8I8x4oBwAECm6 && iXB 
    >= float VcC9kOnSufL + mNo * - ! OuHrDsOY97atj4mm 
    [ WibrTR = OGi = U8 || zraU / UdaFtaYvK2Uje6URmUTH 
    ( MS > j - ( VfE64lK5 < ME0X3YaJuu [ dnBLGBONHqimXKRyfaHI 
    ( yCHOIvjFJMlMWP8jOC , SDHPX3P6h ) != IcUoO0i784Q9wY5Z 
    . PbDj7FApJ9u == 736719607.559937398 - - 1649639667 
    - ! FzOtLTPoOQS74aVnttBN ] . MiyRll <= _ ( ) ) ) ] 
    ;



}
struct vqclB6I_oIKB5tyuEbBP m0lzJOMXtBB 
;
struct NG3avg_txpbL7CGdGNbw  pLB , aqBo 

;
int ;
int ;
int ;
int ;
int ;
int ;
struct {
  struct qJ6EZNOj_BdFgZGbTtW {
  }, v8y ;
}YWmo3sqDMpyfWJHCfOB2 ( int eb6GHlDQIjb_PqmCQuv , 
  int E9Aumfqiee8g ) {
  int f6b02bisBDjiGPQy ;
  int R_SbIws1 ;
  int jLtzmCv6hYFEhtJk ;
}
